--- a/app/src/main/res/drawable/btn_sign_up.xml
+++ b/app/src/main/res/drawable/btn_sign_up.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-</selector>
+    <stroke android:color="@color/darkPink" android:width="2dp"/>
+    <solid android:color="#FFFFFF"/>
+    <corners android:radius="@dimen/_10dp"/>
+</shape>
