--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#252525</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="background">#252525</color>
+    <color name="darkPink">#EA5C8C</color>
+    <color name="softPink">#FFC1C7</color>
 </resources>
