--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,12 +5,13 @@
     android:id="@+id/cl_chat1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/chatBg"
     tools:context=".ChatActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar_chat"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,25 +20,34 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_chat"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:background="?attr/colorPrimaryDark"
             app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/back_to_list"
+                android:src="@drawable/back"/>
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/iv_profile_chat"
                 android:layout_width="@dimen/_32dp"
                 android:layout_height="@dimen/_32dp"
+                android:layout_marginStart="@dimen/_26dp"
                 android:src="@drawable/profile" />
 
             <TextView
                 android:id="@+id/tv_username_chat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_26dp"
+                android:layout_marginStart="16dp"
                 android:text="@string/txt_username"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+
+
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -51,51 +61,71 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appbar_chat" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_chat2"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:cardCornerRadius="10dp"
+        app:cardMaxElevation="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_chat_message"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintStart_toStartOf="parent">
 
-        <ImageView
-            android:id="@+id/iv_attach_file_chat"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginBottom="4dp"
-            android:background="@drawable/ic_attach_file"
-            android:contentDescription="@string/content_description"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_chat2"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_60dp"
+            android:background="@drawable/cv_chat"
+            app:layout_constraintTop_toBottomOf="@+id/rv_chat_message">
 
-        <ImageView
-            android:id="@+id/iv_send_message_chat"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginBottom="4dp"
-            android:background="@drawable/ic_action_name"
-            android:contentDescription="@string/content_description"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/iv_attach_file_chat" />
+            <ImageView
+                android:id="@+id/iv_attach_file_chat"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginBottom="4dp"
+                android:background="@drawable/attach"
+                android:contentDescription="@string/content_description"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/edt_message_chat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="2dp"
-            android:background="@android:color/transparent"
-            android:hint="@string/write_message_here"
-            android:inputType="text"
-            app:layout_constraintBottom_toBottomOf="@id/iv_attach_file_chat"
-            app:layout_constraintStart_toEndOf="@+id/iv_attach_file_chat"
-            app:layout_constraintTop_toTopOf="@+id/iv_attach_file_chat" />
+            <ImageView
+                android:id="@+id/iv_send_message_chat"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/smile"
+                android:contentDescription="@string/content_description"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/edt_message_chat"
+                app:layout_constraintTop_toTopOf="@+id/iv_attach_file_chat"
+                app:layout_constraintVertical_bias="0.111" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <EditText
+                android:id="@+id/edt_message_chat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="2dp"
+                android:background="@android:color/transparent"
+                android:hint="@string/type_something"
+                android:inputType="text"
+                android:textColorHint="@color/softPink"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@id/iv_attach_file_chat"
+                app:layout_constraintStart_toEndOf="@+id/iv_attach_file_chat"
+                app:layout_constraintTop_toTopOf="@+id/iv_attach_file_chat" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
